[package]
name = "ccldummy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
sha2 = "0.10.8"
secp256k1 = "0.28.2"
rand = "0.8.5"
bitcoin = "0.31.1"
hmac = "0.12.1"
hmac-sha512 = "1.1.5"
num-bigint = "0.4.4"
ripemd = "0.1.3"